--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./assets/styles/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,21 +12,23 @@
 
 <body>
   <div id="gameBoard">
-    <!--<div id="12345" class="card" data-icon="bootstrap">
-      <div class="card_front">
-        <img class="icon" src="./assets/images/bootstrap.png">
+
+    <!-- <div class="card">
+      <div id="hasduifuiasdfhui" class="card_front" data-icon="bootstrap">
+        <img
+          src="./assets/images/bootstrap.png"
+          alt="bootstrap"
+          class="icon"
+        />
       </div>
-      <div class="card_back">
-        &lt/&gt
-      </div> -->
-  </div>
+      <div class="card_back">&lt/&gt</div>
+    </div> -->
   </div>
 
+
   <div id="gameOver">
-    <div>
-      Parabéns, você completou o jogo !
-    </div>
-    <button id="restart" onclick="restart()">Restart</button>
+    <div>Parabéns, você completou o jogo !</div>
+    <button id="restart" onclick="restart()">Jogue novamente</button>
   </div>
   <script src="./assets/scripts/game.js"></script>
   <script src="./assets/scripts/script.js"></script>
